<resources>
    <string name="app_name">Project3_Quiz_WAA_2</string>
    <string name="title">European Union Quiz</string>
    <string name="subtitle">This is a quiz about the European Union. Answer all the questions</string>
    <string name="question1">Question 1: When was the European Economic Community (EEC) established?</string>
    <string name="q1a1">1949</string>
    <string name="q1a2">1958</string>
    <string name="q1a3">1963</string>
    <string name="q1a4">1969</string>
    <string name="question2">Question 2: How many member states are in the EU?</string>
    <string name="q2a1">25</string>
    <string name="q2a2">26</string>
    <string name="q2a3">28</string>
    <string name="q2a4">30</string>
    <string name="question3">Question 3 - Who is the current President of the European Commission?</string>
    <string name="question4">Question 4 - Which countries are not member of the EU?</string>
    <string name="q4a1">Vatican</string>
    <string name="q4a2">Luxembourg</string>
    <string name="q4a3">Liechtenstein</string>
    <string name="q4a4">Norway</string>
    <string name="question5">Question 5 - Which institutions are not part of the EU?</string>
    <string name="q5a1">Council of Europe</string>
    <string name="q5a2">European Council</string>
    <string name="q5a3">European Central Bank</string>
    <string name="q5a4">European Youth Centre</string>
    <string name="question6">Question 6 - Which member state has the highest population?</string>
    <string name="q6a1">Germany</string>
    <string name="q6a2">France</string>
    <string name="q6a3">Italy</string>
    <string name="q6a4">Spain</string>
    <string name="question7">Question 7 - How many stars could be found in the flag of the European Union?</string>
    <string name="q7a1">10</string>
    <string name="q7a2">12</string>
    <string name="q7a3">15</string>
    <string name="q7a4">28</string>
    <string name="submitButton">Submit</string>
    <string name="restartButton">Restart</string>
    <string name="imgDescr">eUFlagMainPic</string>
    <string name="hintName">name</string>
</resources>
