<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.project3_quiz_waa_2.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/euflag"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/imgDescr"
            android:scaleType="fitCenter"
            android:src="@drawable/euflagstars" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/subtitle"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/questionOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/question1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/layout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp">

                <RadioButton
                    android:id="@+id/q1a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q1RadioButtonClicked"
                    android:text="@string/q1a1"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/q1a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q1RadioButtonClicked"
                    android:text="@string/q1a2"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/q1a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q1RadioButtonClicked"
                    android:text="@string/q1a3"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/q1a4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q1RadioButtonClicked"
                    android:text="@string/q1a4"
                    android:textAppearance="?android:textAppearanceMedium" />


            </RadioGroup>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/questionTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/question2"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp">

                <RadioButton
                    android:id="@+id/q2a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q2RadioButtonClicked"
                    android:text="@string/q2a1"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/q2a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q2RadioButtonClicked"
                    android:text="@string/q2a2"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/q2a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q2RadioButtonClicked"
                    android:text="@string/q2a3"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/q2a4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q2RadioButtonClicked"
                    android:text="@string/q2a4"
                    android:textAppearance="?android:textAppearanceMedium" />


            </RadioGroup>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/questionThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/question3"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/q3Answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintName"
                android:inputType="textMultiLine"
                android:paddingBottom="8dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/questionFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/question4"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/q4A1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkBoxQ4"
                android:paddingLeft="8dp"
                android:text="@string/q4a1"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/q4A2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkBoxQ4"
                android:paddingLeft="8dp"
                android:text="@string/q4a2"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/q4A3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkBoxQ4"
                android:paddingLeft="8dp"
                android:text="@string/q4a3"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/q4A4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkBoxQ4"
                android:paddingLeft="8dp"
                android:text="@string/q4a4"
                android:textAppearance="?android:textAppearanceMedium" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/questionFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/question5"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/q5A1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkBoxQ5"
                android:paddingLeft="8dp"
                android:text="@string/q5a1"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/q5A2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkBoxQ5"
                android:paddingLeft="8dp"
                android:text="@string/q5a2"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/q5A3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkBoxQ5"
                android:paddingLeft="8dp"
                android:text="@string/q5a3"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/q5A4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkBoxQ5"
                android:paddingLeft="8dp"
                android:text="@string/q5a4"
                android:textAppearance="?android:textAppearanceMedium" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/questionSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/question6"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp">

                <RadioButton
                    android:id="@+id/q6a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q6RadioButtonClicked"
                    android:text="@string/q6a1"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/q6a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q6RadioButtonClicked"
                    android:text="@string/q6a2"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/q6a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q6RadioButtonClicked"
                    android:text="@string/q6a3"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/q6a4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q6RadioButtonClicked"
                    android:text="@string/q6a4"
                    android:textAppearance="?android:textAppearanceMedium" />


            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/questionSeven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/question7"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingBottom="16dp"
                >

                <RadioButton
                    android:id="@+id/q7a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q7RadioButtonClicked"
                    android:text="@string/q7a1"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/q7a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q7RadioButtonClicked"
                    android:text="@string/q7a2"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/q7a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q7RadioButtonClicked"
                    android:text="@string/q7a3"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/q7a4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="q7RadioButtonClicked"
                    android:text="@string/q7a4"
                    android:textAppearance="?android:textAppearanceMedium" />


            </RadioGroup>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="result"
               android:layout_marginLeft="8dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/rounded_button"
                android:text="@string/submitButton" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clear"
                android:layout_marginLeft="64dp"
                android:background="@drawable/rounded_button"
                android:text="@string/restartButton" />


        </LinearLayout>
    </LinearLayout>

</ScrollView>

